# Onekey_OpenClaw

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
dev/: openclaw-dev-api.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scanner.rs
src/components/app/: app-settings-provider.tsx  app-shell.test.tsx  app-shell.tsx  mode-toggle.tsx  theme-provider.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx
src/hooks/: use-environment-scan.ts
src/lib/: context-menu.test.ts  context-menu.ts  demo-runtime.ts  tauri.test.ts  tauri.ts  types.ts  utils.ts
src/pages/: ChannelWizardPage.test.tsx  ChannelWizardPage.tsx  DeployPage.tsx  DiagnosticsPage.test.tsx  DiagnosticsPage.tsx  RecipesPage.tsx  RuntimePage.tsx  SettingsPage.tsx  SkillsPage.tsx
