[package]
name = "openclaw-deployer"
version = "0.1.0"
description = "OpenClaw desktop deployer"
authors = ["Codex"]
edition = "2021"
build = "build.rs"

[lib]
name = "openclaw_deployer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
